# glint

./: .gitignore  CMakeLists.txt  Readme.md  conanfile.py  conanfile.txt  dependencies.py
.github/workflows/: cmake.yml
Glint/Headers/: glint.hpp
Glint/Headers/classes/: lesson.hpp  vertexBufferArray.hpp  vertex_buffer.hpp
Glint/Headers/learnopengl/0.GettingStarted/: 0.CreatingAWindow.hpp
Glint/Headers/learnopengl/0.HelloTriangle/: 0.HelloTriangle.hpp
Glint/Headers/utilities/: random_utilities.hpp  shader_utilities.hpp
Glint/Shaders/basic/: simple-shader.vs
Glint/Sources/: main.cpp
Glint/Sources/classes/: vertex_buffer.cpp
Glint/Sources/learnopengl/0.GettingStarted/: 0.CreatingAWindow.cpp
Glint/Sources/learnopengl/0.HelloTriangle/: 0.HelloTriangle.cpp
Scripts/: conan_setup.ps1  conan_setup.py  conan_setup.sh  debug_SymlinkShaders.ps1  debug_SymlinkShaders.py
data/shaders/basic/: simple-shader.frag  simple-shader.vert
include/: glint.hpp
include/classes/: lesson.hpp  shader_s.h
include/learnopengl/0.HelloTriangle/: 0.HelloTriangle.hpp
include/tests/: bullet_test.hpp
src/: main.cpp
src/classes/: vertex_buffer.cpp
src/learnopengl/0.HelloTriangle/: 0.HelloTriangle.cpp
tools/: m1.sh
